tests/ui/unsized-locals/unsized-locals-using-unsized-fn-params.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/unsized-locals-using-unsized-fn-params.rs:5:15
   |
LL | fn f1(box box _b: Box<Box<[u8]>>) {}
   |               ^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = help: unsized locals are gated as unstable feature `#[feature(unsized_locals)]`

error[E0277]: the size for values of type `[i32]` cannot be known at compilation time
  --> $DIR/unsized-locals-using-unsized-fn-params.rs:8:12
   |
LL | fn f2((_x, _y): (i32, [i32])) {}
   |            ^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[i32]`
   = help: unsized locals are gated as unstable feature `#[feature(unsized_locals)]`

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/unsized-locals-using-unsized-fn-params.rs:13:15
   |
LL |     let _foo: [u8] = *foo;
   |               ^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = help: unsized locals are gated as unstable feature `#[feature(unsized_locals)]`
help: borrowed types have a statically known size
   |
LL |     let _foo: &[u8] = *foo;
   |               +

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
